--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,12 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+scipy = "^1.6.0"
+numpy = "^1.19.5"
+statsmodels = "^0.12.1"
+networkx = "^2.5"
+matplotlib = "^3.3.3"
+cvxopt = "^1.2.5"
 
 [tool.poetry.dev-dependencies]
 
