--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ numpy = "^1.19.5"
 statsmodels = "^0.12.1"
 networkx = "^2.5"
 matplotlib = "^3.3.3"
-cvxopt = "^1.2.5"
+cvxopt = "1.2.5"
 
 [tool.poetry.dev-dependencies]
+black = "^20.8b1"
+isort = "^5.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
